# ISRO_hackathon

./: README.md  README_PASTE_FOLDERS_HERE.md  __init__.py  cli.py  config.py  config.yaml  constants.py  dataset.py  download (1)  infer.py  ingestion.py  losses.py  model.py  ohrc_terrain.py  pipeline.py  preprocess.py  products.py  pyproject.toml  requirements.txt  train.py  utils.py
