[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lunarice-net"
version = "0.1.0"
description = "Physics-informed lunar ice detection pipeline for ISRO hackathon PS 8"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "rasterio>=1.3",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "torch>=2.3",
]

[tool.setuptools.packages.find]
where = ["src"]

